# serializer version: 1
# name: TestApprovalsListView.test_approval_contract_filters[approvals list ended contracts filter]
  dict({
    'num_queries': 13,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "companies_siaeconvention" U0
             WHERE (U0."deactivated_at" >= %s
                    AND U0."id" = ("companies_company"."convention_id"))
             LIMIT 1) AS "has_convention_in_grace_period",
                 "companies_siaeconvention"."id",
                 "companies_siaeconvention"."kind",
                 "companies_siaeconvention"."siret_signature",
                 "companies_siaeconvention"."is_active",
                 "companies_siaeconvention"."deactivated_at",
                 "companies_siaeconvention"."reactivated_by_id",
                 "companies_siaeconvention"."reactivated_at",
                 "companies_siaeconvention"."asp_id",
                 "companies_siaeconvention"."created_at",
                 "companies_siaeconvention"."updated_at"
          FROM "companies_company"
          INNER JOIN "companies_companymembership" ON ("companies_company"."id" = "companies_companymembership"."company_id")
          LEFT OUTER JOIN "companies_siaeconvention" ON ("companies_company"."convention_id" = "companies_siaeconvention"."id")
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND "companies_companymembership"."user_id" = %s
                 AND "companies_company"."id" IN (%s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."deactivated_at" >= %s
                                AND U0."id" = ("companies_company"."convention_id"))
                         LIMIT 1)))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ApprovalForm._get_choices_for_job_seekers[www/approvals_views/forms.py]',
          'ApprovalForm.__init__[www/approvals_views/forms.py]',
          'ApprovalListView.setup[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          INNER JOIN "approvals_approval" ON ("users_user"."id" = "approvals_approval"."user_id")
          WHERE ("approvals_approval"."id" IN
                   (SELECT V0."id"
                    FROM "approvals_approval" V0
                    WHERE EXISTS
                        (SELECT %s AS "a"
                         FROM "job_applications_jobapplication" U0
                         WHERE (U0."approval_id" = (V0."id")
                                AND U0."state" = %s
                                AND U0."to_company_id" = %s)
                         LIMIT 1))
                 AND "users_user"."kind" = %s)
          ORDER BY "users_user"."last_name" ASC,
                   "users_user"."first_name" ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouPaginator.count[<site-packages>/django/core/paginator.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*)
          FROM
            (SELECT DISTINCT "approvals_approval"."id" AS "col1",
                             "approvals_approval"."start_at" AS "col2",
                             "approvals_approval"."end_at" AS "col3",
                             "approvals_approval"."created_at" AS "col4",
                             "approvals_approval"."number" AS "col5",
                             "approvals_approval"."pe_notification_status" AS "col6",
                             "approvals_approval"."pe_notification_time" AS "col7",
                             "approvals_approval"."pe_notification_endpoint" AS "col8",
                             "approvals_approval"."pe_notification_exit_code" AS "col9",
                             "approvals_approval"."user_id" AS "col10",
                             "approvals_approval"."created_by_id" AS "col11",
                             "approvals_approval"."origin" AS "col12",
                             "approvals_approval"."eligibility_diagnosis_id" AS "col13",
                             "approvals_approval"."updated_at" AS "col14",
                             "approvals_approval"."origin_siae_siret" AS "col15",
                             "approvals_approval"."origin_siae_kind" AS "col16",
                             "approvals_approval"."origin_sender_kind" AS "col17",
                             "approvals_approval"."origin_prescriber_organization_kind" AS "col18",
                             "approvals_approval"."public_id" AS "col19",
                             COALESCE(
                                        (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                         FROM "companies_contract" U0
                                         WHERE (U0."company_id" = %s
                                                AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                                AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                                AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                         ORDER BY 1 DESC
                                         LIMIT 1),
                                        (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                         FROM "job_applications_jobapplication" U0
                                         WHERE (U0."approval_id" = ("approvals_approval"."id")
                                                AND U0."state" = %s
                                                AND U0."to_company_id" = %s)
                                         ORDER BY 1 DESC
                                         LIMIT 1), "approvals_approval"."end_at") AS "contract_end_at"
             FROM "approvals_approval"
             WHERE (EXISTS
                      (SELECT %s AS "a"
                       FROM "job_applications_jobapplication" U0
                       WHERE (U0."approval_id" = ("approvals_approval"."id")
                              AND U0."state" = %s
                              AND U0."to_company_id" = %s)
                       LIMIT 1)
                    AND COALESCE(
                                   (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                    FROM "companies_contract" U0
                                    WHERE (U0."company_id" = %s
                                           AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                           AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                           AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                    ORDER BY 1 DESC
                                    LIMIT 1),
                                   (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                    FROM "job_applications_jobapplication" U0
                                    WHERE (U0."approval_id" = ("approvals_approval"."id")
                                           AND U0."state" = %s
                                           AND U0."to_company_id" = %s)
                                    ORDER BY 1 DESC
                                    LIMIT 1), "approvals_approval"."end_at") < %s)) subquery
        ''',
      }),
      dict({
        'origin': list([
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "employee_record_employeerecord"
          INNER JOIN "job_applications_jobapplication" ON ("employee_record_employeerecord"."job_application_id" = "job_applications_jobapplication"."id")
          WHERE ("job_applications_jobapplication"."to_company_id" = %s
                 AND "employee_record_employeerecord"."status" = %s)
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Company.has_job_descriptions_not_updated_recently[companies/models.py]',
          'IfNode[layout/base.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "companies_jobdescription"
          WHERE ("companies_jobdescription"."company_id" = %s
                 AND "companies_jobdescription"."is_active"
                 AND "companies_jobdescription"."last_employer_update_at" < %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_admin[common_apps/organizations/models.py]',
          'Company.convention_can_be_accessed_by[companies/models.py]',
          'nav[utils/templatetags/nav.py]',
          'InclusionNode[layout/_header_authenticated.html]',
          'IncludeNode[layout/base.html]',
          'IfNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "users_user"
          INNER JOIN "companies_companymembership" ON ("users_user"."id" = "companies_companymembership"."user_id")
          WHERE ("companies_companymembership"."id" IN
                   (SELECT U0."id"
                    FROM "companies_companymembership" U0
                    INNER JOIN "users_user" U1 ON (U0."user_id" = U1."id")
                    WHERE (U1."is_active"
                           AND U0."is_active"
                           AND U0."company_id" = %s
                           AND U0."is_admin"
                           AND U1."is_active"))
                 AND "users_user"."id" = %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT DISTINCT "approvals_approval"."id",
                          "approvals_approval"."start_at",
                          "approvals_approval"."end_at",
                          "approvals_approval"."created_at",
                          "approvals_approval"."number",
                          "approvals_approval"."pe_notification_status",
                          "approvals_approval"."pe_notification_time",
                          "approvals_approval"."pe_notification_endpoint",
                          "approvals_approval"."pe_notification_exit_code",
                          "approvals_approval"."user_id",
                          "approvals_approval"."created_by_id",
                          "approvals_approval"."origin",
                          "approvals_approval"."eligibility_diagnosis_id",
                          "approvals_approval"."updated_at",
                          "approvals_approval"."origin_siae_siret",
                          "approvals_approval"."origin_siae_kind",
                          "approvals_approval"."origin_sender_kind",
                          "approvals_approval"."origin_prescriber_organization_kind",
                          "approvals_approval"."public_id",
                          COALESCE(
                                     (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                      FROM "companies_contract" U0
                                      WHERE (U0."company_id" = %s
                                             AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                             AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                             AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                      ORDER BY 1 DESC
                                      LIMIT 1),
                                     (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                      FROM "job_applications_jobapplication" U0
                                      WHERE (U0."approval_id" = ("approvals_approval"."id")
                                             AND U0."state" = %s
                                             AND U0."to_company_id" = %s)
                                      ORDER BY 1 DESC
                                      LIMIT 1), "approvals_approval"."end_at") AS "contract_end_at",
                          "users_user"."id",
                          "users_user"."password",
                          "users_user"."last_login",
                          "users_user"."is_superuser",
                          "users_user"."username",
                          "users_user"."first_name",
                          "users_user"."last_name",
                          "users_user"."is_staff",
                          "users_user"."is_active",
                          "users_user"."date_joined",
                          "users_user"."address_line_1",
                          "users_user"."address_line_2",
                          "users_user"."post_code",
                          "users_user"."city",
                          "users_user"."department",
                          "users_user"."coords",
                          "users_user"."geocoding_score",
                          "users_user"."geocoding_updated_at",
                          "users_user"."ban_api_resolved_address",
                          "users_user"."insee_city_id",
                          "users_user"."title",
                          "users_user"."full_name_search_vector",
                          "users_user"."email",
                          "users_user"."phone",
                          "users_user"."kind",
                          "users_user"."identity_provider",
                          "users_user"."has_completed_welcoming_tour",
                          "users_user"."created_by_id",
                          "users_user"."external_data_source_history",
                          "users_user"."last_checked_at",
                          "users_user"."public_id",
                          "users_user"."address_filled_at",
                          "users_user"."first_login",
                          "users_user"."upcoming_deletion_notified_at",
                          "users_user"."allow_next_sso_sub_update"
          FROM "approvals_approval"
          INNER JOIN "users_user" ON ("approvals_approval"."user_id" = "users_user"."id")
          WHERE (EXISTS
                   (SELECT %s AS "a"
                    FROM "job_applications_jobapplication" U0
                    WHERE (U0."approval_id" = ("approvals_approval"."id")
                           AND U0."state" = %s
                           AND U0."to_company_id" = %s)
                    LIMIT 1)
                 AND COALESCE(
                                (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                 FROM "companies_contract" U0
                                 WHERE (U0."company_id" = %s
                                        AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                        AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                        AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                 ORDER BY 1 DESC
                                 LIMIT 1),
                                (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                 FROM "job_applications_jobapplication" U0
                                 WHERE (U0."approval_id" = ("approvals_approval"."id")
                                        AND U0."state" = %s
                                        AND U0."to_company_id" = %s)
                                 ORDER BY 1 DESC
                                 LIMIT 1), "approvals_approval"."end_at") < %s)
          ORDER BY "approvals_approval"."created_at" DESC
          LIMIT 6
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT "approvals_suspension"."id",
                 "approvals_suspension"."approval_id",
                 "approvals_suspension"."start_at",
                 "approvals_suspension"."end_at",
                 "approvals_suspension"."siae_id",
                 "approvals_suspension"."reason",
                 "approvals_suspension"."reason_explanation",
                 "approvals_suspension"."created_at",
                 "approvals_suspension"."created_by_id",
                 "approvals_suspension"."updated_at",
                 "approvals_suspension"."updated_by_id"
          FROM "approvals_suspension"
          WHERE "approvals_suspension"."approval_id" IN (%s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s)
          ORDER BY "approvals_suspension"."start_at" DESC
        ''',
      }),
    ]),
  })
# ---
# name: TestApprovalsListView.test_approval_contract_filters[approvals list ongoing contracts filter]
  dict({
    'num_queries': 13,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "companies_siaeconvention" U0
             WHERE (U0."deactivated_at" >= %s
                    AND U0."id" = ("companies_company"."convention_id"))
             LIMIT 1) AS "has_convention_in_grace_period",
                 "companies_siaeconvention"."id",
                 "companies_siaeconvention"."kind",
                 "companies_siaeconvention"."siret_signature",
                 "companies_siaeconvention"."is_active",
                 "companies_siaeconvention"."deactivated_at",
                 "companies_siaeconvention"."reactivated_by_id",
                 "companies_siaeconvention"."reactivated_at",
                 "companies_siaeconvention"."asp_id",
                 "companies_siaeconvention"."created_at",
                 "companies_siaeconvention"."updated_at"
          FROM "companies_company"
          INNER JOIN "companies_companymembership" ON ("companies_company"."id" = "companies_companymembership"."company_id")
          LEFT OUTER JOIN "companies_siaeconvention" ON ("companies_company"."convention_id" = "companies_siaeconvention"."id")
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND "companies_companymembership"."user_id" = %s
                 AND "companies_company"."id" IN (%s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."deactivated_at" >= %s
                                AND U0."id" = ("companies_company"."convention_id"))
                         LIMIT 1)))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ApprovalForm._get_choices_for_job_seekers[www/approvals_views/forms.py]',
          'ApprovalForm.__init__[www/approvals_views/forms.py]',
          'ApprovalListView.setup[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          INNER JOIN "approvals_approval" ON ("users_user"."id" = "approvals_approval"."user_id")
          WHERE ("approvals_approval"."id" IN
                   (SELECT V0."id"
                    FROM "approvals_approval" V0
                    WHERE EXISTS
                        (SELECT %s AS "a"
                         FROM "job_applications_jobapplication" U0
                         WHERE (U0."approval_id" = (V0."id")
                                AND U0."state" = %s
                                AND U0."to_company_id" = %s)
                         LIMIT 1))
                 AND "users_user"."kind" = %s)
          ORDER BY "users_user"."last_name" ASC,
                   "users_user"."first_name" ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouPaginator.count[<site-packages>/django/core/paginator.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*)
          FROM
            (SELECT DISTINCT "approvals_approval"."id" AS "col1",
                             "approvals_approval"."start_at" AS "col2",
                             "approvals_approval"."end_at" AS "col3",
                             "approvals_approval"."created_at" AS "col4",
                             "approvals_approval"."number" AS "col5",
                             "approvals_approval"."pe_notification_status" AS "col6",
                             "approvals_approval"."pe_notification_time" AS "col7",
                             "approvals_approval"."pe_notification_endpoint" AS "col8",
                             "approvals_approval"."pe_notification_exit_code" AS "col9",
                             "approvals_approval"."user_id" AS "col10",
                             "approvals_approval"."created_by_id" AS "col11",
                             "approvals_approval"."origin" AS "col12",
                             "approvals_approval"."eligibility_diagnosis_id" AS "col13",
                             "approvals_approval"."updated_at" AS "col14",
                             "approvals_approval"."origin_siae_siret" AS "col15",
                             "approvals_approval"."origin_siae_kind" AS "col16",
                             "approvals_approval"."origin_sender_kind" AS "col17",
                             "approvals_approval"."origin_prescriber_organization_kind" AS "col18",
                             "approvals_approval"."public_id" AS "col19",
                             COALESCE(
                                        (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                         FROM "companies_contract" U0
                                         WHERE (U0."company_id" = %s
                                                AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                                AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                                AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                         ORDER BY 1 DESC
                                         LIMIT 1),
                                        (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                         FROM "job_applications_jobapplication" U0
                                         WHERE (U0."approval_id" = ("approvals_approval"."id")
                                                AND U0."state" = %s
                                                AND U0."to_company_id" = %s)
                                         ORDER BY 1 DESC
                                         LIMIT 1), "approvals_approval"."end_at") AS "contract_end_at"
             FROM "approvals_approval"
             WHERE (EXISTS
                      (SELECT %s AS "a"
                       FROM "job_applications_jobapplication" U0
                       WHERE (U0."approval_id" = ("approvals_approval"."id")
                              AND U0."state" = %s
                              AND U0."to_company_id" = %s)
                       LIMIT 1)
                    AND COALESCE(
                                   (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                    FROM "companies_contract" U0
                                    WHERE (U0."company_id" = %s
                                           AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                           AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                           AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                    ORDER BY 1 DESC
                                    LIMIT 1),
                                   (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                    FROM "job_applications_jobapplication" U0
                                    WHERE (U0."approval_id" = ("approvals_approval"."id")
                                           AND U0."state" = %s
                                           AND U0."to_company_id" = %s)
                                    ORDER BY 1 DESC
                                    LIMIT 1), "approvals_approval"."end_at") >= %s)) subquery
        ''',
      }),
      dict({
        'origin': list([
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "employee_record_employeerecord"
          INNER JOIN "job_applications_jobapplication" ON ("employee_record_employeerecord"."job_application_id" = "job_applications_jobapplication"."id")
          WHERE ("job_applications_jobapplication"."to_company_id" = %s
                 AND "employee_record_employeerecord"."status" = %s)
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Company.has_job_descriptions_not_updated_recently[companies/models.py]',
          'IfNode[layout/base.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "companies_jobdescription"
          WHERE ("companies_jobdescription"."company_id" = %s
                 AND "companies_jobdescription"."is_active"
                 AND "companies_jobdescription"."last_employer_update_at" < %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_admin[common_apps/organizations/models.py]',
          'Company.convention_can_be_accessed_by[companies/models.py]',
          'nav[utils/templatetags/nav.py]',
          'InclusionNode[layout/_header_authenticated.html]',
          'IncludeNode[layout/base.html]',
          'IfNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "users_user"
          INNER JOIN "companies_companymembership" ON ("users_user"."id" = "companies_companymembership"."user_id")
          WHERE ("companies_companymembership"."id" IN
                   (SELECT U0."id"
                    FROM "companies_companymembership" U0
                    INNER JOIN "users_user" U1 ON (U0."user_id" = U1."id")
                    WHERE (U1."is_active"
                           AND U0."is_active"
                           AND U0."company_id" = %s
                           AND U0."is_admin"
                           AND U1."is_active"))
                 AND "users_user"."id" = %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT DISTINCT "approvals_approval"."id",
                          "approvals_approval"."start_at",
                          "approvals_approval"."end_at",
                          "approvals_approval"."created_at",
                          "approvals_approval"."number",
                          "approvals_approval"."pe_notification_status",
                          "approvals_approval"."pe_notification_time",
                          "approvals_approval"."pe_notification_endpoint",
                          "approvals_approval"."pe_notification_exit_code",
                          "approvals_approval"."user_id",
                          "approvals_approval"."created_by_id",
                          "approvals_approval"."origin",
                          "approvals_approval"."eligibility_diagnosis_id",
                          "approvals_approval"."updated_at",
                          "approvals_approval"."origin_siae_siret",
                          "approvals_approval"."origin_siae_kind",
                          "approvals_approval"."origin_sender_kind",
                          "approvals_approval"."origin_prescriber_organization_kind",
                          "approvals_approval"."public_id",
                          COALESCE(
                                     (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                      FROM "companies_contract" U0
                                      WHERE (U0."company_id" = %s
                                             AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                             AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                             AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                      ORDER BY 1 DESC
                                      LIMIT 1),
                                     (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                      FROM "job_applications_jobapplication" U0
                                      WHERE (U0."approval_id" = ("approvals_approval"."id")
                                             AND U0."state" = %s
                                             AND U0."to_company_id" = %s)
                                      ORDER BY 1 DESC
                                      LIMIT 1), "approvals_approval"."end_at") AS "contract_end_at",
                          "users_user"."id",
                          "users_user"."password",
                          "users_user"."last_login",
                          "users_user"."is_superuser",
                          "users_user"."username",
                          "users_user"."first_name",
                          "users_user"."last_name",
                          "users_user"."is_staff",
                          "users_user"."is_active",
                          "users_user"."date_joined",
                          "users_user"."address_line_1",
                          "users_user"."address_line_2",
                          "users_user"."post_code",
                          "users_user"."city",
                          "users_user"."department",
                          "users_user"."coords",
                          "users_user"."geocoding_score",
                          "users_user"."geocoding_updated_at",
                          "users_user"."ban_api_resolved_address",
                          "users_user"."insee_city_id",
                          "users_user"."title",
                          "users_user"."full_name_search_vector",
                          "users_user"."email",
                          "users_user"."phone",
                          "users_user"."kind",
                          "users_user"."identity_provider",
                          "users_user"."has_completed_welcoming_tour",
                          "users_user"."created_by_id",
                          "users_user"."external_data_source_history",
                          "users_user"."last_checked_at",
                          "users_user"."public_id",
                          "users_user"."address_filled_at",
                          "users_user"."first_login",
                          "users_user"."upcoming_deletion_notified_at",
                          "users_user"."allow_next_sso_sub_update"
          FROM "approvals_approval"
          INNER JOIN "users_user" ON ("approvals_approval"."user_id" = "users_user"."id")
          WHERE (EXISTS
                   (SELECT %s AS "a"
                    FROM "job_applications_jobapplication" U0
                    WHERE (U0."approval_id" = ("approvals_approval"."id")
                           AND U0."state" = %s
                           AND U0."to_company_id" = %s)
                    LIMIT 1)
                 AND COALESCE(
                                (SELECT COALESCE(U0."end_date", %s) AS "end_date_or_today"
                                 FROM "companies_contract" U0
                                 WHERE (U0."company_id" = %s
                                        AND U0."job_seeker_id" = ("approvals_approval"."user_id")
                                        AND NOT (COALESCE(U0."end_date", %s) < ("approvals_approval"."start_at"))
                                        AND NOT (U0."start_date" > ("approvals_approval"."end_at")))
                                 ORDER BY 1 DESC
                                 LIMIT 1),
                                (SELECT U0."hiring_end_at" AS "hiring_end_at"
                                 FROM "job_applications_jobapplication" U0
                                 WHERE (U0."approval_id" = ("approvals_approval"."id")
                                        AND U0."state" = %s
                                        AND U0."to_company_id" = %s)
                                 ORDER BY 1 DESC
                                 LIMIT 1), "approvals_approval"."end_at") >= %s)
          ORDER BY "approvals_approval"."created_at" DESC
          LIMIT 9
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT "approvals_suspension"."id",
                 "approvals_suspension"."approval_id",
                 "approvals_suspension"."start_at",
                 "approvals_suspension"."end_at",
                 "approvals_suspension"."siae_id",
                 "approvals_suspension"."reason",
                 "approvals_suspension"."reason_explanation",
                 "approvals_suspension"."created_at",
                 "approvals_suspension"."created_by_id",
                 "approvals_suspension"."updated_at",
                 "approvals_suspension"."updated_by_id"
          FROM "approvals_suspension"
          WHERE "approvals_suspension"."approval_id" IN (%s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s,
                                                         %s)
          ORDER BY "approvals_suspension"."start_at" DESC
        ''',
      }),
    ]),
  })
# ---
# name: TestApprovalsListView.test_job_seeker_filters[approvals list]
  dict({
    'num_queries': 16,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "companies_siaeconvention" U0
             WHERE (U0."deactivated_at" >= %s
                    AND U0."id" = ("companies_company"."convention_id"))
             LIMIT 1) AS "has_convention_in_grace_period",
                 "companies_siaeconvention"."id",
                 "companies_siaeconvention"."kind",
                 "companies_siaeconvention"."siret_signature",
                 "companies_siaeconvention"."is_active",
                 "companies_siaeconvention"."deactivated_at",
                 "companies_siaeconvention"."reactivated_by_id",
                 "companies_siaeconvention"."reactivated_at",
                 "companies_siaeconvention"."asp_id",
                 "companies_siaeconvention"."created_at",
                 "companies_siaeconvention"."updated_at"
          FROM "companies_company"
          INNER JOIN "companies_companymembership" ON ("companies_company"."id" = "companies_companymembership"."company_id")
          LEFT OUTER JOIN "companies_siaeconvention" ON ("companies_company"."convention_id" = "companies_siaeconvention"."id")
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND "companies_companymembership"."user_id" = %s
                 AND "companies_company"."id" IN (%s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."deactivated_at" >= %s
                                AND U0."id" = ("companies_company"."convention_id"))
                         LIMIT 1)))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ApprovalForm._get_choices_for_job_seekers[www/approvals_views/forms.py]',
          'ApprovalForm.__init__[www/approvals_views/forms.py]',
          'ApprovalListView.setup[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          INNER JOIN "approvals_approval" ON ("users_user"."id" = "approvals_approval"."user_id")
          WHERE ("approvals_approval"."id" IN
                   (SELECT V0."id"
                    FROM "approvals_approval" V0
                    WHERE EXISTS
                        (SELECT %s AS "a"
                         FROM "job_applications_jobapplication" U0
                         WHERE (U0."approval_id" = (V0."id")
                                AND U0."state" = %s
                                AND U0."to_company_id" = %s)
                         LIMIT 1))
                 AND "users_user"."kind" = %s)
          ORDER BY "users_user"."last_name" ASC,
                   "users_user"."first_name" ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouPaginator.count[<site-packages>/django/core/paginator.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*)
          FROM
            (SELECT DISTINCT "approvals_approval"."id" AS "col1",
                             "approvals_approval"."start_at" AS "col2",
                             "approvals_approval"."end_at" AS "col3",
                             "approvals_approval"."created_at" AS "col4",
                             "approvals_approval"."number" AS "col5",
                             "approvals_approval"."pe_notification_status" AS "col6",
                             "approvals_approval"."pe_notification_time" AS "col7",
                             "approvals_approval"."pe_notification_endpoint" AS "col8",
                             "approvals_approval"."pe_notification_exit_code" AS "col9",
                             "approvals_approval"."user_id" AS "col10",
                             "approvals_approval"."created_by_id" AS "col11",
                             "approvals_approval"."origin" AS "col12",
                             "approvals_approval"."eligibility_diagnosis_id" AS "col13",
                             "approvals_approval"."updated_at" AS "col14",
                             "approvals_approval"."origin_siae_siret" AS "col15",
                             "approvals_approval"."origin_siae_kind" AS "col16",
                             "approvals_approval"."origin_sender_kind" AS "col17",
                             "approvals_approval"."origin_prescriber_organization_kind" AS "col18",
                             "approvals_approval"."public_id" AS "col19"
             FROM "approvals_approval"
             WHERE EXISTS
                 (SELECT %s AS "a"
                  FROM "job_applications_jobapplication" U0
                  WHERE (U0."approval_id" = ("approvals_approval"."id")
                         AND U0."state" = %s
                         AND U0."to_company_id" = %s)
                  LIMIT 1)) subquery
        ''',
      }),
      dict({
        'origin': list([
          'ApprovalListView.get_context_data[www/approvals_views/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "employee_record_employeerecord"
          INNER JOIN "job_applications_jobapplication" ON ("employee_record_employeerecord"."job_application_id" = "job_applications_jobapplication"."id")
          WHERE ("job_applications_jobapplication"."to_company_id" = %s
                 AND "employee_record_employeerecord"."status" = %s)
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Company.has_job_descriptions_not_updated_recently[companies/models.py]',
          'IfNode[layout/base.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "companies_jobdescription"
          WHERE ("companies_jobdescription"."company_id" = %s
                 AND "companies_jobdescription"."is_active"
                 AND "companies_jobdescription"."last_employer_update_at" < %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_admin[common_apps/organizations/models.py]',
          'Company.convention_can_be_accessed_by[companies/models.py]',
          'nav[utils/templatetags/nav.py]',
          'InclusionNode[layout/_header_authenticated.html]',
          'IncludeNode[layout/base.html]',
          'IfNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "users_user"
          INNER JOIN "companies_companymembership" ON ("users_user"."id" = "companies_companymembership"."user_id")
          WHERE ("companies_companymembership"."id" IN
                   (SELECT U0."id"
                    FROM "companies_companymembership" U0
                    INNER JOIN "users_user" U1 ON (U0."user_id" = U1."id")
                    WHERE (U1."is_active"
                           AND U0."is_active"
                           AND U0."company_id" = %s
                           AND U0."is_admin"
                           AND U1."is_active"))
                 AND "users_user"."id" = %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT DISTINCT "approvals_approval"."id",
                          "approvals_approval"."start_at",
                          "approvals_approval"."end_at",
                          "approvals_approval"."created_at",
                          "approvals_approval"."number",
                          "approvals_approval"."pe_notification_status",
                          "approvals_approval"."pe_notification_time",
                          "approvals_approval"."pe_notification_endpoint",
                          "approvals_approval"."pe_notification_exit_code",
                          "approvals_approval"."user_id",
                          "approvals_approval"."created_by_id",
                          "approvals_approval"."origin",
                          "approvals_approval"."eligibility_diagnosis_id",
                          "approvals_approval"."updated_at",
                          "approvals_approval"."origin_siae_siret",
                          "approvals_approval"."origin_siae_kind",
                          "approvals_approval"."origin_sender_kind",
                          "approvals_approval"."origin_prescriber_organization_kind",
                          "approvals_approval"."public_id",
                          "users_user"."id",
                          "users_user"."password",
                          "users_user"."last_login",
                          "users_user"."is_superuser",
                          "users_user"."username",
                          "users_user"."first_name",
                          "users_user"."last_name",
                          "users_user"."is_staff",
                          "users_user"."is_active",
                          "users_user"."date_joined",
                          "users_user"."address_line_1",
                          "users_user"."address_line_2",
                          "users_user"."post_code",
                          "users_user"."city",
                          "users_user"."department",
                          "users_user"."coords",
                          "users_user"."geocoding_score",
                          "users_user"."geocoding_updated_at",
                          "users_user"."ban_api_resolved_address",
                          "users_user"."insee_city_id",
                          "users_user"."title",
                          "users_user"."full_name_search_vector",
                          "users_user"."email",
                          "users_user"."phone",
                          "users_user"."kind",
                          "users_user"."identity_provider",
                          "users_user"."has_completed_welcoming_tour",
                          "users_user"."created_by_id",
                          "users_user"."external_data_source_history",
                          "users_user"."last_checked_at",
                          "users_user"."public_id",
                          "users_user"."address_filled_at",
                          "users_user"."first_login",
                          "users_user"."upcoming_deletion_notified_at",
                          "users_user"."allow_next_sso_sub_update"
          FROM "approvals_approval"
          INNER JOIN "users_user" ON ("approvals_approval"."user_id" = "users_user"."id")
          WHERE EXISTS
              (SELECT %s AS "a"
               FROM "job_applications_jobapplication" U0
               WHERE (U0."approval_id" = ("approvals_approval"."id")
                      AND U0."state" = %s
                      AND U0."to_company_id" = %s)
               LIMIT 1)
          ORDER BY "approvals_approval"."created_at" DESC
          LIMIT 2
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[approvals/includes/list_results.html]',
          'IncludeNode[approvals/list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[approvals/list.html]',
        ]),
        'sql': '''
          SELECT "approvals_suspension"."id",
                 "approvals_suspension"."approval_id",
                 "approvals_suspension"."start_at",
                 "approvals_suspension"."end_at",
                 "approvals_suspension"."siae_id",
                 "approvals_suspension"."reason",
                 "approvals_suspension"."reason_explanation",
                 "approvals_suspension"."created_at",
                 "approvals_suspension"."created_by_id",
                 "approvals_suspension"."updated_at",
                 "approvals_suspension"."updated_by_id"
          FROM "approvals_suspension"
          WHERE "approvals_suspension"."approval_id" IN (%s,
                                                         %s)
          ORDER BY "approvals_suspension"."start_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: test_list_and_table_empty_snapshot[empty]
  '''
  <div id="approvals-list">
      <div class="c-box c-box--results my-3 my-md-4">
          <div class="c-box--results__body">
              <p class="mb-0">
                  Aucun salarié pour le moment.
              </p>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_table_and_list_snapshot[list]
  '''
  <div id="approvals-list">
      <div class="c-box c-box--results has-links-inside my-3 my-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-user-line">
                  </i>
                  <div>
                      <h3>
                          DOE Jane
                      </h3>
                      <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                          <span class="badge badge-sm text-wrap rounded-pill bg-success-lighter text-success">
                              <i aria-hidden="true" class="ri-pass-valid-line ri-xl">
                              </i>
                              PASS IAE valide
                          </span>
                      </div>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <ul class="list-data">
                  <li>
                      <small>
                          Numéro de PASS IAE
                      </small>
                      <strong>
                          <span>
                              99999
                          </span>
                          <span class="ms-1">
                              99
                          </span>
                          <span class="ms-1">
                              99999
                          </span>
                      </strong>
                      <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="999999999999" type="button">
                          <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                          </i>
                          <span class="visually-hidden">
                              Copier
                          </span>
                      </button>
                  </li>
                  <li>
                      <small>
                          Durée de validité
                          <i aria-label="La durée de validité est calculée sur la base d'un nombre de jours calendaires. Si le PASS IAE n'est pas suspendu, elle décroît donc tous les jours (samedi, dimanche et jours fériés compris)." class="ri-information-line text-info" data-bs-title="La durée de validité est calculée sur la base d'un nombre de jours calendaires. Si le PASS IAE n'est pas suspendu, elle décroît donc tous les jours (samedi, dimanche et jours fériés compris)." data-bs-toggle="tooltip" role="button" tabindex="0">
                          </i>
                      </small>
                      <strong class="text-success">
                          356112 jours (Environ 975 ans)
                      </strong>
                  </li>
              </ul>
          </div>
          <div class="c-box--results__footer">
              <div class="d-flex justify-content-md-end">
                  <a aria-label="Voir les informations de DOE Jane" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="salaries" data-matomo-event="true" data-matomo-option="details-salarie" href="/employees/detail/7614fc4b-aef9-4694-ab17-12324300180a?approval=[PK of Approval]&back_url=/approvals/list%3Fdisplay%3Dlist">
                      Voir les informations
                  </a>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_table_and_list_snapshot[table]
  '''
  <div id="approvals-list">
      <div class="table-responsive mt-3 mt-md-4">
          <table class="table table-hover table-sortable">
              <caption class="visually-hidden">
                  Liste des salariés et PASS IAE
              </caption>
              <thead>
                  <tr>
                      <th class="text-nowrap" scope="col">
                          NOM Prénom
                      </th>
                      <th scope="col">
                          Statut du PASS IAE
                      </th>
                      <th scope="col">
                          Numéro de PASS IAE
                      </th>
                      <th scope="col">
                          Durée de validité
                          <i aria-label="La durée de validité est calculée sur la base d'un nombre de jours calendaires. Si le PASS IAE n'est pas suspendu, elle décroît donc tous les jours (samedi, dimanche et jours fériés compris)." class="ri-information-line text-info" data-bs-title="La durée de validité est calculée sur la base d'un nombre de jours calendaires. Si le PASS IAE n'est pas suspendu, elle décroît donc tous les jours (samedi, dimanche et jours fériés compris)." data-bs-toggle="tooltip" role="button" tabindex="0">
                          </i>
                      </th>
                      <th class="text-end w-50px" scope="col">
                      </th>
                  </tr>
              </thead>
              <tbody>
                  <tr>
                      <td>
                          <a class="btn-link" data-matomo-action="clic" data-matomo-category="salaries" data-matomo-event="true" data-matomo-option="details-salarie-tableau" href="/employees/detail/7614fc4b-aef9-4694-ab17-12324300180a?approval=[PK of Approval]&back_url=/approvals/list%3Fdisplay%3Dtable">
                              DOE Jane
                          </a>
                      </td>
                      <td>
                          <span class="badge badge-sm text-wrap rounded-pill bg-success-lighter text-success">
                              <i aria-hidden="true" class="ri-pass-valid-line ri-xl">
                              </i>
                              PASS IAE valide
                          </span>
                      </td>
                      <td>
                          <span>
                              99999
                          </span>
                          <span class="ms-1">
                              99
                          </span>
                          <span class="ms-1">
                              99999
                          </span>
                          <button class="btn-link btn-sm" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="999999999999" type="button">
                              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
                              </i>
                              <span class="visually-hidden">
                                  Copier
                              </span>
                          </button>
                      </td>
                      <td>
                          356112 jours (Environ 975 ans)
                      </td>
                      <td class="text-end w-50px align-middle">
                          <a class="btn btn-sm btn-link btn-ico-only" data-bs-title="Voir les informations de DOE Jane" data-bs-toggle="tooltip" data-matomo-action="clic" data-matomo-category="salaries" data-matomo-event="true" data-matomo-option="details-salarie-tableau" href="/employees/detail/7614fc4b-aef9-4694-ab17-12324300180a?approval=[PK of Approval]&back_url=/approvals/list%3Fdisplay%3Dtable">
                              <i aria-label="Voir les informations de DOE Jane" class="ri-arrow-drop-right-line fs-lg">
                              </i>
                          </a>
                      </td>
                  </tr>
              </tbody>
          </table>
      </div>
  </div>
  
  '''
# ---
